# PasteBook

./: .env.example  .gitignore  Cargo.toml  FUNDING.yml  LICENSE  README.md  build.gradle.kts  config.properties  docker-compose.yml  install.sh  nginx.conf  package-lock.json  package.json  pastebook.conf  pnpm-lock.yaml
.github/workflows/: build-and-deploy.yml  docker-build-publish.yml
backend/: .gitignore  Cargo.toml  Dockerfile  build.gradle.kts  settings.gradle.kts
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  paste.rs  paste_content.rs  paste_metadata.rs  user.rs  user_metadata.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250425_104512_create_user_and_paste_tables.rs  m20250504_040542_remove_reportbook.rs  m20250525_002244_create_index.rs  m20250525_013131_pastebook_redesign.rs  m20250528_133430_create_language.rs
backend/src/: aws_service.rs  delete_service.rs  main.rs  mongodb_service.rs
backend/src/controllers/: get_controller.rs  mod.rs  upload_controller.rs
backend/src/database/: aws_service.rs  migration_service.rs  mod.rs  mongodb_service.rs  mongoresult.rs  postgres_service.rs
backend/src/main/kotlin/dev/loudbook/pastebook/: BucketUtils.kt  DeleteHandler.kt  IPUtils.kt
backend/src/main/kotlin/dev/loudbook/pastebook/controllers/: GetController.kt  ListController.kt  UploadController.kt
backend/src/main/kotlin/dev/loudbook/pastebook/data/: Paste.kt  PasteDTO.kt  PastePrivateDTO.kt  R2Service.kt  User.kt  UserDTO.kt
backend/src/main/kotlin/dev/loudbook/pastebook/mongo/: MigrationHandler.kt  UserService.kt  UsersRepository.kt
backend/src/main/resources/: application.yml
backend/src/models/: content_query.rs  mod.rs  paste.rs  user.rs
backend/src/routes/: get.rs  get_content.rs  mod.rs  upload.rs
backend/src/test/kotlin/dev/loudbook/pastebook/pastebook/: PasteBookApplicationTests.kt
backend/src/utils/: data.rs  datautils.rs  ip.rs  iputils.rs  mod.rs  string.rs
caddy/: Caddyfile  Dockerfile  entrypoint.sh
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.d.ts  app.html
frontend/src/components/: Arrow.svelte  Beta.svelte  Content.svelte  Header.svelte  Highlight.svelte  Mode.svelte  Navbar.svelte  PotentialIssues.svelte  Toolbar.svelte
frontend/src/components/image/: LoadingTitle.svelte
frontend/src/components/new/: Submit.svelte
frontend/src/components/pulltab/: Pulltab.svelte
frontend/src/components/settings/: DropDown.svelte  (+2 more)
frontend/src/lib/: paste.ts  scrolltomiddle.ts  stores.ts  timehandler.ts
frontend/src/params/: paste.ts
frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/static/: global.css  robots.txt
migration/: Dockerfile  migrate.py  requirements.txt
nginx/: Dockerfile  default.conf.template  entrypoint.sh  nginx.conf  nginx.conf.template
src/: discord.rs  get.rs  main.rs  post.rs
src/main/resources/: application.properties  application.yml
website/pastebook/: package-lock.json  package.json  svelte.config.js  tsconfig.json
website/pastebook/src/: +layout.svelte  app.d.ts  app.html
website/pastebook/static/: robots.txt
(+117 files in other folders)
