[package]
name = "pastebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "fs", ] }
axum = "0.7.5"
random_word = { version = "0.4.3", features = ["en"] }
serde_json = "1.0.115"
chrono = "0.4.19"
futures = "0.3"
dotenv = "0.15.0"
reqwest = "0.12.3"