[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
tokio = { version = "1", features = ["rt"] }
serde = { version = "1.0.215", features = ["derive"] }
flate2 = { version = "1.0.19", features = ["zlib"] }
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.9.1"
env_logger = "0.11.5"
log = "0.4.22"
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
uuid = { version = "1.13.1", features = ["v4"] }
entity = { path = "entity" }
migration = { path = "migration" }
dotenv = { version = "0.15.0", optional = true }

[features]
default = []
local-dev = ["dotenv"]

[[bin]]
name = "backend"
path = "src/main.rs"