[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
tokio = { version = "1", features = ["rt"] }
serde = { version = "1.0.219", features = ["derive"] }
flate2 = { version = "1.1.1", features = ["zlib"] }
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.9.1"
env_logger = "0.11.8"
log = "0.4.27"
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
uuid = { version = "1.16.0", features = ["v4"] }
entity = { path = "entity" }
migration = { path = "migration" }
dotenv = { version = "0.15.0", optional = true }

[features]
default = []
local-dev = ["dotenv"]

[[bin]]
name = "backend"
path = "src/main.rs"
